--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hydra-twin-vision</title>
-    <meta name="description" content="Hydraulic Fault Dashboard" />
+    <title>Hydraulic Fault Dashboard</title>
+    <meta name="description" content="Real-time monitoring, analytics, and fault simulation for hydraulic systems." />
     <meta name="author" content="" />
 
-    <meta property="og:title" content="hydra-twin-vision" />
-    <meta property="og:description" content="Hydraulic Fault Dashboard" />
+    <meta property="og:title" content="Hydraulic Fault Dashboard" />
+    <meta property="og:description" content="Real-time monitoring, analytics, and fault simulation for hydraulic systems." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="" />
-    <meta name="twitter:image" content="/public/placeholder.svg" />
   </head>
 
   <body>
